--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           </div>
           <div class="networks">
             <ul class="networks__list">
-              <li class="networks__item"><a class="networks__link" href="">Instagram</a></li>
-              <li class="networks__item"><a class="networks__link" href="">Twitter</a></li>
-              <li class="networks__item"><a class="networks__link" href="">Facebook</a></li>
-              <li class="networks__item"><a class="networks__link" href="">LinkedIn</a></li>
+              <li class="networks__item"><a class="networks__link" href="##">Instagram</a></li>
+              <li class="networks__item"><a class="networks__link" href="##">Twitter</a></li>
+              <li class="networks__item"><a class="networks__link" href="##">Facebook</a></li>
+              <li class="networks__item"><a class="networks__link" href="##">LinkedIn</a></li>
             </ul>
           </div>
         </div>
@@ -277,28 +277,28 @@
                   <p lang="en" class="card__subtitle">Product Designer</p>
                   <ul class="card__list">
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#facebook "></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#linkedin"></use>
                         </svg>
@@ -326,28 +326,28 @@
                   <p lang="en" class="card__subtitle">Frontend Developer</p>
                   <ul class="card__list">
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#linkedin"></use>
                         </svg>
@@ -375,28 +375,28 @@
                   <p lang="en" class="card__subtitle">Marketing</p>
                   <ul class="card__list">
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#linkedin"></use>
                         </svg>
@@ -424,28 +424,28 @@
                   <p lang="en" class="card__subtitle">UI Designer</p>
                   <ul class="card__list">
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="card__item">
-                      <a href="" class="card__link">
+                      <a href="#" class="card__link">
                         <svg class="card__icon" width="20" height="20">
                           <use href="./images/icon.svg#linkedin"></use>
                         </svg>
@@ -463,42 +463,42 @@
           <h2 class="companies__title">Постоянные клиенты</h2>
           <ul class="companies__list">
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#first"></use>
                 </svg>
               </a>
             </li>
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#second"></use>
                 </svg>
               </a>
             </li>
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#third"></use>
                 </svg>
               </a>
             </li>
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#fourth"></use>
                 </svg>
               </a>
             </li>
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#fifth"></use>
                 </svg>
               </a>
             </li>
             <li class="companies__item">
-              <a href="" class="companies__link">
+              <a href="#" class="companies__link">
                 <svg class="companies__icon" width="106" height="60">
                   <use href="./images/icon.svg#sixth"></use>
                 </svg>
@@ -538,28 +538,28 @@
           <h2 class="social__title">Присоединяйтесь</h2>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#linkedin"></use>
                 </svg>
