--- a/portfolio.html
+++ b/portfolio.html
@@ -65,10 +65,10 @@
           </div>
           <div class="networks">
             <ul class="networks__list">
-              <li class="networks__item"><a class="networks__link" href="">Instagram</a></li>
-              <li class="networks__item"><a class="networks__link" href="">Twitter</a></li>
-              <li class="networks__item"><a class="networks__link" href="">Facebook</a></li>
-              <li class="networks__item"><a class="networks__link" href="">LinkedIn</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Instagram</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Twitter</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">Facebook</a></li>
+              <li class="networks__item"><a class="networks__link" href="#">LinkedIn</a></li>
             </ul>
           </div>
         </div>
@@ -87,7 +87,7 @@
           </ul>
           <ul class="gallery__lists">
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -115,7 +115,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -143,7 +143,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -171,7 +171,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -199,7 +199,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -227,7 +227,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -255,7 +255,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -283,7 +283,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -311,7 +311,7 @@
               </a>
             </li>
             <li class="gallery__item">
-              <a class="portfolio" href="">
+              <a class="portfolio" href="#">
                 <div class="portfolio__thumb">
                   <img
                     class="portfolio__img"
@@ -372,28 +372,28 @@
           <h2 class="social__title">Присоединяйтесь</h2>
           <ul class="social__list">
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link" href="">
+              <a class="social__link" href="#">
                 <svg class="social__icon" width="20" height="20">
                   <use href="./images/icon.svg#linkedin"></use>
                 </svg>
